--- a/index.html
+++ b/index.html
@@ -63,4 +63,65 @@
             display: flex; align-items: center; justify-content: center;
             text-decoration: none; font-weight: 900; font-size: 20px;
             color: var(--brand-yellow); background: var(--brand-black);
-            box-shadow
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+        
+        .footer-text { margin-top: 35px; font-weight: 800; font-size: 12px; letter-spacing: 2px; opacity: 0.9; }
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <img src="logo.png" alt="Территория Вкуса" class="logo">
+    <h1>Территория Вкуса</h1>
+
+    <div class="shop-card">
+        <div class="shop-name">Юнусабадский рынок</div>
+        <div class="btn-group">
+            <a href="tel:+998901749924" class="btn btn-black">СВЯЗЬ</a>
+            <a href="https://yandex.uz/maps/-/CPaXaDox" target="_blank" class="btn btn-outline">ЛОКАЦИЯ</a>
+        </div>
+    </div>
+
+    <div class="shop-card">
+        <div class="shop-name">Буз базар</div>
+        <div class="btn-group">
+            <a href="tel:+998900221052" class="btn btn-black">СВЯЗЬ</a>
+            <a href="https://yandex.uz/maps/-/CPaXeE4I" target="_blank" class="btn btn-outline">ЛОКАЦИЯ</a>
+        </div>
+    </div>
+
+    <div class="shop-card">
+        <div class="shop-name">Катартал</div>
+        <div class="btn-group">
+            <a href="tel:+998911354928" class="btn btn-black">СВЯЗЬ</a>
+            <a href="https://yandex.uz/maps/-/CPaXeQJa" target="_blank" class="btn btn-outline">ЛОКАЦИЯ</a>
+        </div>
+    </div>
+
+    <div class="shop-card">
+        <div class="shop-name">Аския</div>
+        <div class="btn-group">
+            <a href="tel:+998978662803" class="btn btn-black">СВЯЗЬ</a>
+            <a href="https://yandex.uz/maps/-/CPaXaDjr" target="_blank" class="btn btn-outline">ЛОКАЦИЯ</a>
+        </div>
+    </div>
+
+    <div class="shop-card">
+        <div class="shop-name">Гагарин</div>
+        <div class="btn-group">
+            <a href="tel:+998977581849" class="btn btn-black">СВЯЗЬ</a>
+            <a href="https://yandex.uz/maps/-/CPaXeFmK" target="_blank" class="btn btn-outline">ЛОКАЦИЯ</a>
+        </div>
+    </div>
+
+    <div class="social-row">
+        <a href="https://t.me/tasin_sharaev" class="social-link" target="_blank">TG</a>
+        <a href="https://www.instagram.com/territoriavkusa.uz/" class="social-link" target="_blank">IG</a>
+    </div>
+    
+    <p class="footer-text">EST. 2006</p>
+</div>
+
+</body>
+</html>
